--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ elixir:
 otp_release:
   - 20.0
 script:
-- "MIX_ENV=test mix do deps.get, test && MIX_ENV=test mix compile && MIX_ENV=test mix coveralls.travis"
+- "MIX_ENV=test mix do deps.get, test --exclude wip && MIX_ENV=test mix compile && MIX_ENV=test mix coveralls.travis"
